--- a/registro.html
+++ b/registro.html
@@ -21,7 +21,7 @@
             <input type="password" id="contraseña" name="contraseña" required><br><br>
             <input type="submit" value="Regístrate">
         </form>
-        <p>¿Ya tienes una cuenta? <a href="login.html">Inicia sesión aquí</a></p>
+        <p>¿Ya tienes una cuenta? <a href="index.html">Inicia sesión aquí</a></p>
     </div>
     <script src="registro.js"></script>
 </body>
